# travel-ai-backend

./: .JSON_response_example  .env  .gitignore  .notes  .pylintrc  Dockerfile  README.md  docker-compose.yml  migration.sql  offline_migration.sql  pyproject.toml  requirements.txt  structure.txt  structure_full.txt
alembic/: env.py  env.py~
alembic/versions/: 2025_04_09_2239-7f34871708a8_initial_create_tables.py  2025_04_10_1132-d154ec55a2c2_initial_migration.py  2025_04_10_1526-7019b62912b6_initial_migration.py
app/: .env.example  config.py~  entrypoint.sh  main.py  migration.sql  offline_migration.sql  structure.txt
app/alembic/: env.py
app/constants/: roles.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  base.py  base_class.py  base_class.py~  sessions.py
app/dependencies/: auth.py
app/exceptions/: route.py  route_access.py  user.py
app/fixtures/: data.py  data_for_services.py  load.py  load_with_services.py
app/models/: __init__.py  ai_cache.py  ai_cache.py~  export.py  export.py~  route.py  route_access.py  user.py
app/repositories/: __init__.py  ai_cache.py  base.py  route.py  route_access.py  user.py
app/schemas/: ai_cache.py  ai_promt.py  common.py  export.py  export.py~  route.py  route_access.py  token.py  user.py
app/services/: route_service.py  user_service.py
app/tests/: conftest.py  test_auth.py  test_route_access.py  test_routes.py  test_users.py
app/utils/: config.py  logging.py  logging_config.py  logging_middleware.py  security.py  utils.py
backend/: Dockerfile
backend/alembic/: env.py
(+35 files in other folders)
