[project]
name = "travelbot"
version = "0.1.0"
description = "OTUS Basic Diploma work"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.19.0",
    "aiohttp>=3.11.16",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "reportlab>=4.3.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "python-dotenv>=1.1.0",
]